engine/test/electron/scripts/lexer/errors/invalid_characters.e
// ERROR TEST: Invalid/unexpected characters
`backtick
